RESOLVED FIXED314034
ASSERT under HTMLMediaElement::virtualHasPendingActivity
https://bugs.webkit.org/show_bug.cgi?id=314034
Summary ASSERT under HTMLMediaElement::virtualHasPendingActivity
Eric Carlson
Reported 2026-05-04 17:00:11 PDT
HTMLMediaElement::virtualHasPendingActivity can be called from the GC thread so it should not call anything that creates a temporary strong ref.
Attachments
Eric Carlson
Comment 1 2026-05-04 17:00:24 PDT
Eric Carlson
Comment 2 2026-05-04 17:16:11 PDT
EWS
Comment 3 2026-05-05 00:46:40 PDT
Committed 312598@main (640e6ff568d1): <https://commits.webkit.org/312598@main> Reviewed commits have been landed. Closing PR #64228 and removing active labels.
EWS
Comment 4 2026-05-12 00:13:08 PDT
Committed 305877.488@webkitglib/2.52 (822a38e50852): <https://commits.webkit.org/305877.488@webkitglib/2.52> Reviewed commits have been landed. Closing PR #64700 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.