Cherry-pick 312598@main (640e6ff568d1). https://bugs.webkit.org/show_bug.cgi?id=314034

ASSERT under HTMLMediaElement::virtualHasPendingActivity
    https://bugs.webkit.org/show_bug.cgi?id=314034
    rdar://176143872

    Reviewed by Jean-Yves Avenard and Ryosuke Niwa.

    Many MediaPlayerPrivateMediaSourceAVFObjC member variables are a main-thread-only but
    it can be access from the worker thread by the MediaSource/Private, so its destructor
    should always run on the main thread.

    While investigation this it was observed that HTMLMediaElement::virtualHasPendingActivity
    may be called from the GC thread but it calls HTMLMediaElement::canProduceAudio() which
    calls MediaPlayer::hasAudio() and creates a temporary RefPtr to the MediaPlayerPrivate.
    This is unnecessary as every MediaPlayer notifies HTMLMediaElement when its ability to
    produce audio changes, so fix this by caching `canProduceAudio` in a std::atomic which is
    updated only on the main thread whenever relevant state changes. canProduceAudio()
    now just returns the cached value and is safe to call from any thread.

    * Source/WebCore/html/HTMLMediaElement.cpp:
    (WebCore::HTMLMediaElement::canProduceAudio const):
    (WebCore::HTMLMediaElement::computeCanProduceAudio const):
    (WebCore::HTMLMediaElement::canProduceAudioChanged):
    * Source/WebCore/html/HTMLMediaElement.h:
    * Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.h:

    Canonical link: https://commits.webkit.org/312598@main

Canonical link: https://commits.webkit.org/305877.488@webkitglib/2.52